--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <iframe src="https://jizhidexiaohuang.github.io/webRTC_demo/base/index.html" width="500" height="800" 
         allow="microphone;camera;midi;encrypted-media;"></iframe>
+
+    <iframe document.domain="https://zegodev.gitee.io" 
+        src="https://zegodev.gitee.io/zego-express-webrtc-sample/base/index.html" width="500" height="800" 
+        allow="microphone;camera;midi;encrypted-media;"></iframe>
+    
 </body>
 </html>
